--- a/BlackJackSolver.ipynb
+++ b/BlackJackSolver.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from Strategy import choose_action"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,28 +27,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BlackJack():\n",
     "    def __init__(self):\n",
     "        self.deck = Deck()\n",
-    "        self.hands_to_play = None\n",
+    "        self.hands_to_play = []\n",
     "        self.dealer_public = None\n",
     "        self.dealer_hidden = None\n",
     "        self.bet = None\n",
     "        self.hands_to_resolve = []\n",
+    "        \n",
     "    def deal(self, ):\n",
-    "        self.player_hands = [[self.deck.draw(), self.deck.draw()]]\n",
+    "        player_hand = [self.deck.draw(), self.deck.draw()]\n",
     "        self.dealer_public = self.deck.draw()\n",
     "        self.dealer_hidden = self.deck.draw()\n",
+    "        self.hands_to_play.append(player_hand)\n",
+    "        \n",
     "    def reset(self, bet):\n",
     "        self.bet = bet\n",
     "        self.deal()\n",
-    "        return (self.hands_to_play, self.hands_to_resolve, self.dealer)\n",
+    "        return (self.hands_to_play, self.hands_to_resolve, self.dealer_public)\n",
+    "    \n",
     "    def reset_with_specific_hand(self, dealer):\n",
     "        return NotImplemented\n",
+    "    \n",
     "    def hand_to_value(self, hand):\n",
     "        value = 0\n",
     "        aces = 0\n",
@@ -60,12 +66,25 @@
     "            else:\n",
     "                value = value + int(card)\n",
     "        while (value > 21 and aces > 0):\n",
-    "            value = value - 11\n",
+    "            value = value - 10\n",
     "            aces = aces -1\n",
     "        return value\n",
     "    \n",
+    "    \n",
     "    def dealer_hit_strategy(self, dealer_hand):\n",
-    "        return NotImplemented  \n",
+    "        dealer_score = self.hand_to_value(dealer_hand)\n",
+    "        \n",
+    "        print(dealer_hand, dealer_score)\n",
+    "        \n",
+    "        if(dealer_score < 17):\n",
+    "            dealer_hand.append(self.deck.draw())\n",
+    "            self.dealer_hit_strategy(dealer_hand)\n",
+    "\n",
+    "        if(dealer_score in range(17, 22)):\n",
+    "            return dealer_score\n",
+    "\n",
+    "        if(dealer_score > 21):\n",
+    "            return 0\n",
     "    \n",
     "    def check_blackjack(self, hand):\n",
     "        value = self.hand_to_value(hand)\n",
@@ -74,7 +93,13 @@
     "        else:\n",
     "            return False\n",
     "            \n",
-    "    def resolve(self, player_value, dealer_value, dealer_hand):\n",
+    "    def resolve(self, player_value, dealer_hand):\n",
+    "        \n",
+    "        dealer_score = dealer_hit_strategy(dealer_hand)\n",
+    "        \n",
+    "        if(player_value > dealer_score):\n",
+    "            return\n",
+    "        \n",
     "        return NotImplemented\n",
     "    \n",
     "    def check_player_bust(self, hand):\n",
@@ -85,18 +110,20 @@
     "            return False\n",
     "\n",
     "    def step_hand(self, action, player_hand):\n",
-    "        player_has_blackjack = self.check_blackjack(self.hand)\n",
+    "        player_has_blackjack = self.check_blackjack(player_hand)\n",
+    "        \n",
     "        if player_has_blackjack:\n",
     "            self.hands_to_resolve.append(player_hand)\n",
+    "            self.hands_to_play.remove(player_hand)\n",
     "            return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':1}\n",
+    "        \n",
     "        else:\n",
-    "            \n",
     "            if action == 'stand':\n",
     "                self.hands_to_resolve.append(player_hand)\n",
     "                return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':0}\n",
     "            \n",
     "            elif action == 'hit':\n",
-    "                player_hand.append(deck.deal())\n",
+    "                player_hand.append(deck.draw())\n",
     "                is_player_bust = self.check_player_bust(player_hand)\n",
     "                if is_player_bust:\n",
     "                    return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':0}\n",
@@ -105,7 +132,7 @@
     "                \n",
     "            elif action == 'double':\n",
     "                self.bet = self.bet * 2\n",
-    "                player_hand.append(deck.deal())\n",
+    "                player_hand.append(deck.draw())\n",
     "                is_player_bust = self.check_player_bust(player_hand)\n",
     "                if is_player_bust:\n",
     "                    return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':0}\n",
@@ -116,19 +143,23 @@
     "            elif action == 'split':\n",
     "                assert len(player_hand) != 2, 'Player has more than two cards'\n",
     "                assert player_hand[0] == player_hand[1], 'Player`s cards are different'\n",
-    "                self.player_hands.append([player_hand[0], deck.deal()])\n",
-    "                player_hand = [player_hand[0], deck.deal()]\n",
+    "                self.player_hands.append([player_hand[0], deck.draw()])\n",
+    "                player_hand = [player_hand[0], deck.draw()]\n",
     "                return (player_hand, self.dealer_public), 0, 0, {'player_has_blackjack':0}\n",
     "            \n",
-    "    def step(self, actions):\n",
-    "        assert len(actions) == len(self.player_hands), 'Number of actions is different from number of hands'\n",
-    "        \n",
+    "    def step(self):\n",
+    "        while(len(self.hands_to_play) > 0):\n",
+    "            for player_hand in self.hands_to_play:\n",
+    "                action = choose_action(player_hand, self.dealer_public)\n",
+    "                self.step_hand(action, player_hand)\n",
+    "                \n",
+    "        self.resolve()\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['8', '6'], ['2'])"
+       "([['4', '2']], [], '4')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,22 +189,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Q', '6', 'A'] 17\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "14"
+       "17"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.hand_to_value(x[0])"
+    "env.dealer_hit_strategy([\"Q\", \"6\", \"A\"])"
    ]
   },
   {
@@ -200,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
