--- a/BlackJackSolver.ipynb
+++ b/BlackJackSolver.ipynb
@@ -32,14 +32,14 @@
    "outputs": [],
    "source": [
     "class BlackJack():\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, player):\n",
     "        self.deck = Deck()\n",
     "        self.hands_to_play = []\n",
     "        self.dealer_public = None\n",
     "        self.dealer_hidden = None\n",
     "        self.bet = None\n",
     "        self.hands_to_resolve = []\n",
-    "        \n",
+    "        self.player = player        \n",
     "    def deal(self, ):\n",
     "        player_hand = [self.deck.draw(), self.deck.draw()]\n",
     "        self.dealer_public = self.deck.draw()\n",
@@ -50,9 +50,6 @@
     "        self.bet = bet\n",
     "        self.deal()\n",
     "        return (self.hands_to_play, self.hands_to_resolve, self.dealer_public)\n",
-    "    \n",
-    "    def reset_with_specific_hand(self, dealer):\n",
-    "        return NotImplemented\n",
     "    \n",
     "    def hand_to_value(self, hand):\n",
     "        value = 0\n",
@@ -67,24 +64,22 @@
     "                value = value + int(card)\n",
     "        while (value > 21 and aces > 0):\n",
     "            value = value - 10\n",
-    "            aces = aces -1\n",
+    "            aces = aces - 1\n",
     "        return value\n",
     "    \n",
     "    \n",
     "    def dealer_hit_strategy(self, dealer_hand):\n",
     "        dealer_score = self.hand_to_value(dealer_hand)\n",
     "        \n",
-    "        print(dealer_hand, dealer_score)\n",
-    "        \n",
     "        if(dealer_score < 17):\n",
     "            dealer_hand.append(self.deck.draw())\n",
     "            self.dealer_hit_strategy(dealer_hand)\n",
     "\n",
     "        if(dealer_score in range(17, 22)):\n",
-    "            return dealer_score\n",
+    "            return dealer_score, self.check_blackjack(dealer_hand)\n",
     "\n",
     "        if(dealer_score > 21):\n",
-    "            return 0\n",
+    "            return 0, self.check_blackjack(dealer_hand)\n",
     "    \n",
     "    def check_blackjack(self, hand):\n",
     "        value = self.hand_to_value(hand)\n",
@@ -93,14 +88,32 @@
     "        else:\n",
     "            return False\n",
     "            \n",
-    "    def resolve(self, player_value, dealer_hand):\n",
+    "    def resolve(self, player_hand, dealer_score, dealer_has_blackjack):\n",
     "        \n",
-    "        dealer_score = dealer_hit_strategy(dealer_hand)\n",
+    "        player_score = self.hand_to_value(player_hand)\n",
+    "        player_has_blackjack = self.check_blackjack(player_hand)\n",
     "        \n",
-    "        if(player_value > dealer_score):\n",
-    "            return\n",
+    "        if(self.is_player_bust()):\n",
+    "            return 0\n",
     "        \n",
-    "        return NotImplemented\n",
+    "        if(dealer_has_blackjack):\n",
+    "            if(player_has_blackjack):\n",
+    "                return 1\n",
+    "            else:\n",
+    "                return 0\n",
+    "        \n",
+    "        if(player_score > dealer_score):\n",
+    "            if player_has_blackjack:\n",
+    "                return 2.5\n",
+    "            else:\n",
+    "                return 2\n",
+    "        \n",
+    "        if(player_score == dealer_score):\n",
+    "            return 1\n",
+    "        \n",
+    "        if(player_score < dealer_score):\n",
+    "            return 0\n",
+    "           \n",
     "    \n",
     "    def check_player_bust(self, hand):\n",
     "        value = self.hand_to_value(hand)\n",
@@ -113,47 +126,54 @@
     "        player_has_blackjack = self.check_blackjack(player_hand)\n",
     "        \n",
     "        if player_has_blackjack:\n",
-    "            self.hands_to_resolve.append(player_hand)\n",
-    "            self.hands_to_play.remove(player_hand)\n",
-    "            return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':1}\n",
+    "            return player_hand, 1\n",
     "        \n",
     "        else:\n",
     "            if action == 'stand':\n",
     "                self.hands_to_resolve.append(player_hand)\n",
-    "                return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':0}\n",
+    "                return player_hand, 1\n",
     "            \n",
     "            elif action == 'hit':\n",
     "                player_hand.append(deck.draw())\n",
     "                is_player_bust = self.check_player_bust(player_hand)\n",
     "                if is_player_bust:\n",
-    "                    return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':0}\n",
+    "                    return player_hand, 1\n",
     "                else:\n",
-    "                    return (player_hand, self.dealer_public), 0, 0, {'player_has_blackjack':0}\n",
+    "                    return player_hand, 0\n",
     "                \n",
     "            elif action == 'double':\n",
     "                self.bet = self.bet * 2\n",
     "                player_hand.append(deck.draw())\n",
     "                is_player_bust = self.check_player_bust(player_hand)\n",
     "                if is_player_bust:\n",
-    "                    return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':0}\n",
+    "                    return player_hand, 1\n",
     "                else:\n",
     "                    self.hands_to_resolve.append(player_hand)\n",
-    "                    return (player_hand, self.dealer_public), 0, 1, {'player_has_blackjack':0}\n",
+    "                    return player_hand, 1\n",
     "            \n",
     "            elif action == 'split':\n",
     "                assert len(player_hand) != 2, 'Player has more than two cards'\n",
     "                assert player_hand[0] == player_hand[1], 'Player`s cards are different'\n",
-    "                self.player_hands.append([player_hand[0], deck.draw()])\n",
+    "                self.hands_to_play.append([player_hand[0], deck.draw()])\n",
     "                player_hand = [player_hand[0], deck.draw()]\n",
-    "                return (player_hand, self.dealer_public), 0, 0, {'player_has_blackjack':0}\n",
+    "                return player_hand, 0\n",
     "            \n",
     "    def step(self):\n",
     "        while(len(self.hands_to_play) > 0):\n",
     "            for player_hand in self.hands_to_play:\n",
-    "                action = choose_action(player_hand, self.dealer_public)\n",
-    "                self.step_hand(action, player_hand)\n",
-    "                \n",
-    "        self.resolve()\n",
+    "                done = 0\n",
+    "                while not done:  \n",
+    "                    action = self.player.choose_action(player_hand, self.dealer_public)\n",
+    "                    player_hand, done = self.step_hand(action, player_hand)\n",
+    "                    \n",
+    "            self.hands_to_resolve.append(player_hand)\n",
+    "            self.hands_to_play.remove(player_hand)   \n",
+    "        \n",
+    "        dealer_score, dealer_has_blackjack = self.dealer_hit_strategy([self.dealer_public, self.dealer_hidden])\n",
+    "        \n",
+    "        for player_hand in self.hands_to_resolve:\n",
+    "            reward = self.resolve(player_hand, dealer_score, dealer_has_blackjack)\n",
+    "            print(reward)\n",
     "        "
    ]
   },
