sharpe ratio added

--- a/BlackJackSolver.ipynb
+++ b/BlackJackSolver.ipynb
@@ -282,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "parameters = {\n",
-    "    'initial_money': 1000,\n",
+    "    'initial_money': 10000,\n",
     "    #If flat bet is false the actual bet is bet_size * player_bankroll\n",
-    "    'flat_bet':True,\n",
-    "    'bet_size':2,\n",
+    "    'flat_bet':False,\n",
+    "    'bet_size':0.001,\n",
     "    'num_hands':31500,\n",
     "    'sample_size':100\n",
     "}"
@@ -298,20 +298,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def grid_search_experiment(experiment, grid_parameters):\n",
     "    number_of_keys = {}\n",
-    "    for key in grid_parameters.key()\n",
-    "        \n",
-    "    return NotImplemented"
+    "    for key in grid_parameters.keys():\n",
+    "        if type(grid_parameters[key]) == list:\n",
+    "            number_of_keys[key] = len(grid_parameters[key])\n",
+    "        else:\n",
+    "            number_of_keys[key] = 0\n",
+    "    \n",
+    "    return number_of_keys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,35 +339,40 @@
     "        rewards.append(env.player.bankroll - initial_money)\n",
     "    results = {}\n",
     "    rewards = np.array(rewards)\n",
-    "    results['bust_percentage'] = len(np.where(rewards < -95)[0])/len(rewards)\n",
-    "    x1 = np.where(rewards >= -95)[0]\n",
+    "    results['bust_percentage'] = len(np.where(rewards < -0.95 * initial_money)[0])/len(rewards)\n",
+    "    x1 = np.where(rewards >= -0.95 * initial_money)[0]\n",
     "    x2 = np.where(rewards <= 0)[0]\n",
     "    results['loses_percentage'] = len(np.intersect1d(x1,x2))/len(rewards)\n",
     "    results['wins_percentage'] = len(np.where(rewards > 0)[0])/len(rewards)\n",
     "    results['EV'] = rewards.mean()\n",
     "    results['Deviation'] = rewards.std()\n",
-    "    results['rewards'] = rewards\n",
+    "    results['Rewards'] = rewards\n",
+    "    percentage_deviation = (rewards.std() + initial_money)/ initial_money\n",
+    "    percentage_ev = (rewards.mean() + initial_money)/initial_money\n",
+    "    #Treasury rate for something\n",
+    "    risk_free_return = 0.07\n",
+    "    results['sharpe_ratio'] = (percentage_ev - risk_free_return)/percentage_deviation\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [03:23<00:00,  2.03s/it]"
+      "100%|██████████| 100/100 [02:43<00:00,  1.63s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 22s, sys: 144 ms, total: 3min 22s\n",
-      "Wall time: 3min 23s\n"
+      "CPU times: user 2min 43s, sys: 93.8 ms, total: 2min 43s\n",
+      "Wall time: 2min 43s\n"
      ]
     },
     {
@@ -376,26 +385,40 @@
     {
      "data": {
       "text/plain": [
-       "{'bust_percentage': 0.11,\n",
+       "{'bust_percentage': 0.16,\n",
        " 'loses_percentage': 0.01,\n",
-       " 'wins_percentage': 0.88,\n",
-       " 'EV': 480.06,\n",
-       " 'Deviation': 426.34893737407157,\n",
-       " 'rewards': array([1514., 1001.,  112.,  475., 1139.,  456.,  376., 1194.,  641.,\n",
-       "        -185., 1007., -244.,  216.,  106., 1443., -261.,  644.,  417.,\n",
-       "         777.,  281.,  252., -238.,  843.,  260.,  649., 1286., 1308.,\n",
-       "         759.,  394.,  706.,  475.,  115.,  359.,  251.,  232.,   63.,\n",
-       "         518., 1175.,  793.,  453.,  517.,  910.,  681., 1117.,  173.,\n",
-       "         148., -120.,  510., -168.,  925.,  354.,  755.,  486., -220.,\n",
-       "         550.,  474.,  110.,  466.,  229.,   38.,   10.,  445.,  632.,\n",
-       "         763.,  796.,  587.,  595.,  491.,  315.,   70.,  395., 1022.,\n",
-       "         713.,  493.,  790.,  655., -349.,  556.,  953., -487., -265.,\n",
-       "         736.,  609.,  473., 1392.,  -41.,  610.,  199.,  158.,  126.,\n",
-       "         862., -355.,  428., 1039.,  171.,  179.,  781.,  407.,  721.,\n",
-       "         634.])}"
+       " 'wins_percentage': 0.83,\n",
+       " 'EV': 2984.4039676393663,\n",
+       " 'Deviation': 3268.040014196204,\n",
+       " 'Rewards': array([  208.46168938, 10825.89509736,  1532.8660002 ,  2640.93082004,\n",
+       "         -139.13567243,  -226.65685041,  5411.65724237,  3103.52288828,\n",
+       "         3521.49948291,  5892.58260554,  9120.78391954, 10783.0004816 ,\n",
+       "         2952.85133413,  5948.12398939,  6991.80420446,  1100.17895968,\n",
+       "         -908.23072783,  4290.10665556,  2290.06186224,   541.55544706,\n",
+       "          434.15426686,  -470.55999311,  4098.72431909,  7066.81782933,\n",
+       "         5891.52522035,  -855.43729365,  -828.17957498,  4359.17303092,\n",
+       "         1357.53580974,  3902.68290893,   -82.50764086,   407.32127265,\n",
+       "         5009.19784651,  2624.95768192,  4133.39629859,  2515.30899125,\n",
+       "         2552.16329327,  1804.48322222, -1198.11509183,  5206.19236985,\n",
+       "         4266.26521   ,  1485.95951554,  3771.61033711,  3513.82105741,\n",
+       "         1226.95257306, -1201.25676849,  2287.30342356,  2332.84244229,\n",
+       "         2559.08179938,  2126.9505377 ,   403.14838424, -1328.4089167 ,\n",
+       "          606.04706919, -1255.88514653,  2807.39388578,   416.3644472 ,\n",
+       "        16330.28890905,  3261.09391908,  2791.66303925,   578.67978927,\n",
+       "         1998.20784774,  2791.41845253,  1248.20186659,  5990.40141017,\n",
+       "         4955.01103232, -1038.38310595, -2321.06508855,  -693.42020653,\n",
+       "         3626.28894208,  -309.6171326 ,  3350.14797956,  9154.06261875,\n",
+       "         9460.85031038,  8492.59864265,  2970.32742973,  9952.89619888,\n",
+       "         8234.31252196,  2652.63175843,  2833.60189948,  5854.66679672,\n",
+       "         -340.64949454,   311.02734685,  6399.1321921 ,  1484.09014109,\n",
+       "         3823.76672494,   139.5195874 ,   929.80842984,  1734.34148413,\n",
+       "         4078.33121556,  1094.930405  ,  4699.05602892,   125.39229552,\n",
+       "          981.6467772 ,  4733.61383528,  -996.53636256,   862.44007374,\n",
+       "         2940.80072482,  3363.90262108,  9899.60091416,  2182.43194559]),\n",
+       " 'sharpe_ratio': 0.9258642538382164}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
